apps/unifi/unifi.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: unifi-controller
  namespace: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: unifi-controller
  template:
    metadata:
      name: unifi-controller
      labels:
        name: unifi-controller
    spec:
      volumes:
        - name: unifi
          persistentVolumeClaim:
            claimName: unifi-pvc
      containers:
        - name: unifi-controller
          image: 'linuxserver/unifi-controller:latest'
          ports:
            - containerPort: 3478
              protocol: UDP
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8843
              protocol: TCP
            - containerPort: 8880
              protocol: TCP
            - containerPort: 6789
              protocol: TCP
            - containerPort: 10001
              protocol: UDP
            - containerPort: 5514
              protocol: UDP
          volumeMounts:
            - name: unifi
              mountPath: /config
