apps/unifi/unifi-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-ingress
  namespace: unifi-controller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: unifi.unifiedconsulting.net
    http:
      paths:
      - backend:
          service:
            name: unifi-controller
            port:
              number: 8443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unifi.unifiedconsulting.net
    secretName: unifi-secret
